# SoftDesk_API

./: .gitignore  README.md  documentation_API.md  pyproject.toml
.github/: dependabot.yml
api/: mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
projects/: models.py  permissions.py  serializers.py  urls.py  views.py
softdesk/: settings.py  urls.py
users/: models.py  serializers.py  urls.py  views.py
